[package]
name = "dvt1"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
embedded-hal = "0.2.7"
heapless = "0.7.16"
panic-halt = "0.2.0"
pio = "0.2.0"
pio-proc = "0.2.1"
rp2040-boot2 = "0.2.1"
rp2040-hal = "0.6.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
jtag = { path = "../jtag" }
